--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                         </div>   
                                             
                                         </div>
-                            div class="col-md-6">
+                            <div class="col-md-6">
                                 <div class="cn-img">
                                     <img src="img/manunited.jpg" />
                                     <a class="cn-date" href="manunitedfate.html"><i class="far fa-clock"></i>25-Mar-2025</a>
