--- a/index.html
+++ b/index.html
@@ -325,10 +325,10 @@
                         <h2><i class="fas fa-align-justify"></i>Popular News</h2>
                         
                             <div class="col-md-6">
-                                <div class="cn-img">
+                                <div class="tn-img">
                                     <img src="img/jematiah.jpg" />
-                                                                        <a class="cn-date" href="jematiah-slams-bishop-muheria.html"><i class="far fa-clock"></i>26-Feb-2025</a>
-                                            <a class="cn-title" href="jematiah-slams-bishop-muheria.html">Hon.Jematiah Baringo County Slams Bishop Muheria.</a>
+                                                                        <a class="tn-date" href="jematiah-slams-bishop-muheria.html"><i class="far fa-clock"></i>26-Feb-2025</a>
+                                            <a class="tn-title" href="jematiah-slams-bishop-muheria.html">Hon.Jematiah Baringo County Slams Bishop Muheria.</a>
                                         </div>
                                     </div>
                         <div class="col-md-6">
