--- a/index.html
+++ b/index.html
@@ -325,23 +325,23 @@
                         <h2><i class="fas fa-align-justify"></i>Popular News</h2>
                         
                             <div class="col-md-6">
-                                <div class="tn-img">
+                                <div class="cn-img">
                                     <img src="img/jematiah.jpg" />
-                                                                        <a class="cn-date" href="jematiah-slams-bishop-muheria.html"><i class="far fa-clock"></i>26-Feb-2025</a>
+                                                                        <a class="tn-date" href="jematiah-slams-bishop-muheria.html"><i class="far fa-clock"></i>26-Feb-2025</a>
                                             <a class="cn-title" href="jematiah-slams-bishop-muheria.html">Hon.Jematiah Baringo County Slams Bishop Muheria.</a>
                                         </div>
                                     </div>
                         <div class="col-md-6">
                                 <div class="tn-img">
                                     <img src="img/sudan-army.jpg" />
-                                                                        <a class="cn-date" href="Sudan's-army-recaptures-key-institutions-at-it-advances-in-central-Khartoum"><i class="far fa-clock"></i>25-Mar-2025</a>
+                                                                        <a class="tn-date" href="Sudan's-army-recaptures-key-institutions-at-it-advances-in-central-Khartoum"><i class="far fa-clock"></i>25-Mar-2025</a>
                                             <a class="cn-title" href="Sudan's-army-recaptures-key-institutions-at-it-advances-in-central-Khartoum">Sudan's army recaptures key institutions at it advances in central Khartoum.</a>
                                         </div>
                                     </div>
                             <div class="col-md-6">
                                 <div class="tn-img">
                                     <img src="img/kindiki.jpg" />
-                                    <a class="cn-date" href="kindiki-ploys-against-koome.html"><i class="far fa-clock"></i>26-Feb-2025</a>
+                                    <a class="tn-date" href="kindiki-ploys-against-koome.html"><i class="far fa-clock"></i>26-Feb-2025</a>
                                             <a class="cn-title" href="kindiki-ploys-against-koome.html">Deputy President Kithure Kindiki has spoken out on the alleged plan to remove Chief Justice Martha Koome from office</a>
                                     
                                     </div>
