--- a/Ramaphosa-declares-war.html
+++ b/Ramaphosa-declares-war.html
@@ -113,7 +113,7 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/ramaphosa.jpg" />
+                            <img src="img/ramaphosa.jpeg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>26-Mar-2025</a>
                             <h4>Ramaphosa tells Rwanda ‘firing at SA troops is a declaration of war between Rwanda and South Africa.</h4>
