--- a/Ramaphosa-declares-war.html
+++ b/Ramaphosa-declares-war.html
@@ -132,7 +132,7 @@
 
 
 <h4>Rwanda Orders Military to Return to Capital for Security:</h4>
-<img src="img/rwanda-military.jpg" />
+<img src="img/rwanda-military.jpeg" />
 <p>The Prime Minister of Rwanda, Dr. Édouard Ngirente, on behalf of President Paul Kagame has announced that all military personnel stationed at border areas must immediately return to the capital. This decision, made on behalf of President Paul Kagame, aims to protect key government institutions, leadership, and national security. Soldiers are instructed to withdraw in an orderly manner, ensuring that all personnel and equipment are properly accounted for.</p>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
