--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                     </div>
                         <div class="col-md-6">
                                 <div class="tn-img">
-                                    <img src="img/ramaphosa.jpg" />
+                                    <img src="img/ramaphosa.jpeg" />
                                     
                                             <a class="tn-date" href="Ramaphosa-declares-war.html"><i class="far fa-clock"></i>26-Mar-2025</a>
                                     <a class="cn-title" href="Ramaphosa-declares-war.html"> Ramaphosa tells Rwanda ‘firing at SA troops is a declaration of war between Rwanda and South Africa</a>
