--- a/Ramaphosa-declares-war.html
+++ b/Ramaphosa-declares-war.html
@@ -146,7 +146,7 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 <p>Ramaphosa Pleaded Kagame for Support: “He did ask for support to ensure the SA force has adequate electricity, food and water, which we shall help communicate".</p>
-
+<img src="img/south-africa-army.jpeg" />
 <p>“President Ramaphosa confirmed to me that M23 did not kill the soldiers from SA, FARDC did,” Kagame said.</p>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
