--- a/Khusanov-to-start.html
+++ b/Khusanov-to-start.html
@@ -8,10 +8,10 @@
         <script async src="https://fundingchoicesmessages.google.com/i/pub-2859965243036959?ers=1"></script><script>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
        <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
         <meta charset="utf-8">
-        <title>Transfer Centre LIVE! Football transfers, news, updates and rumours</title>
+        <title>Khusanov to start against Manchester United on Sunday</title></title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Latest Football News" name="keywords">
-        <meta content="Transfer windows" name="description">
+        <meta content="" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -115,19 +115,52 @@
                         <div class="tn-img">
                             <img src="img/transfer.jpg" />
                             
-                                    <a class="tn-date" href=""><i class="far fa-clock"></i>25-Mar-2025</a>
+                                    <a class="tn-date" href=""><i class="far fa-clock"></i>05-Apr-2025</a>
                             <h1>Khusanov To Start | 4-2-3-1 Manchester City Predicted Lineup Vs Manchester United</h1>
 <p>Manchester City will face off against Manchester United at Old Trafford this Sunday evening as they look to secure a positive result in the Manchester derby. The Mancunian club managed to earn a solid 2-0 win over Leicester City recently which should keep them in good spirits ahead of this game.</p>
-<p>Pep Guardiola will set his men up in a 4-2-3-1 formation and is expected to name a strong first XI for this game. Abdukodir Khusanov could get a chance to impress from the start of this derby.</p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+                            <p>Pep Guardiola will set his men up in a 4-2-3-1 formation and is expected to name a strong first XI for this game. Abdukodir Khusanov could get a chance to impress from the start of this derby.</p>
 <h3>4-2-3-1 Manchester City Predicted Lineup To Face Manchester United</h3>
 <h4>Defence</h4>
 <p>Ederson will play in goal for the Mancunian giants after he kept a clean sheet versus the Foxes in his last league outing. Ruben Dias will resume his defensive partnership with Abdukodir Khusanov at the heart of Guardiola’s backline as they look to keep the Man United attackers quiet this Sunday.</p>
 <p>Matheus Nunes will feature as the right-back while Josko Gvardiol looks to impress on the other side as the left-back. Both of them will be eager to get forward and express themselves in the opposition half.</p>
-<p>Rico Lewis will offer cover for the defensive positions on the bench.</p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+                            <p>Rico Lewis will offer cover for the defensive positions on the bench.</p>
 <h4>Midfield</h4>
 <p>Ilkay Gundogan and Nico Gonzalez will operate as the holding midfielders as they look to dictate the tempo of the game at the centre of the park.</p>
 <p>The talented trio of Jeremy Doku, Jack Grealish and Savio will function just ahead of them as part of Guardiola’s attack. All three of them need to combine well if they want to cause some headaches for the Man United centre-backs this weekend.</p>
-<p>Kevin de Bruyne and Bernardo Silva will be named on the bench as they await their chance to make an impact in the second 45 minutes if needed.</p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+                            <p>Kevin de Bruyne and Bernardo Silva will be named on the bench as they await their chance to make an impact in the second 45 minutes if needed.</p>
 <h4Attack</h4>
 <p>Omar Marmoush will lead the line for the Mancunian outfit on the offensive end of the field. He managed to score against Leicester which should give him a ton of confidence ahead of this Manchester derby.</p>
 <p>Phil Foden will be available for selection on the bench and might come on to influence the game in the latter stages of the contest if Man City are in need of a goal by then.</p>
