--- a/Khusanov-to-start.html
+++ b/Khusanov-to-start.html
@@ -113,7 +113,7 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/transfer.jpg" />
+                            <img src="img/khusanov.jpeg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>05-Apr-2025</a>
                             <h1>Khusanov To Start | 4-2-3-1 Manchester City Predicted Lineup Vs Manchester United</h1>
