--- a/Khusanov-to-start.html
+++ b/Khusanov-to-start.html
@@ -162,7 +162,8 @@
 </script>
                             <p>Kevin de Bruyne and Bernardo Silva will be named on the bench as they await their chance to make an impact in the second 45 minutes if needed.</p>
 <h4Attack</h4>
-<p>Omar Marmoush will lead the line for the Mancunian outfit on the offensive end of the field. He managed to score against Leicester which should give him a ton of confidence ahead of this Manchester derby.</p>
+<img src="img/grealish.jpeg" />
+    <p>Omar Marmoush will lead the line for the Mancunian outfit on the offensive end of the field. He managed to score against Leicester which should give him a ton of confidence ahead of this Manchester derby.</p>
 <p>Phil Foden will be available for selection on the bench and might come on to influence the game in the latter stages of the contest if Man City are in need of a goal by then.</p>
 
     
