--- a/Khusanov-to-start.html
+++ b/Khusanov-to-start.html
@@ -113,7 +113,7 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/khusanov.jpeg" />
+                            <img src="img/khusanov.jpg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>05-Apr-2025</a>
                             <h1>Khusanov To Start | 4-2-3-1 Manchester City Predicted Lineup Vs Manchester United</h1>
@@ -162,7 +162,7 @@
 </script>
                             <p>Kevin de Bruyne and Bernardo Silva will be named on the bench as they await their chance to make an impact in the second 45 minutes if needed.</p>
 <h4Attack</h4>
-<img src="img/grealish.jpeg" />
+<img src="img/grealish.jpg" />
     <p>Omar Marmoush will lead the line for the Mancunian outfit on the offensive end of the field. He managed to score against Leicester which should give him a ton of confidence ahead of this Manchester derby.</p>
 <p>Phil Foden will be available for selection on the bench and might come on to influence the game in the latter stages of the contest if Man City are in need of a goal by then.</p>
 
