--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                     </div>
                         <div class="col-md-6">
                                 <div class="tn-img">
-                                    <img src="img/khusanov.jpeg" />
+                                    <img src="img/khusanov.jpg" />
                                     
                                             <a class="tn-date" href="Khusanov-to-start.html"><i class="far fa-clock"></i>05-Apr-2025</a>
                                     <a class="cn-title" href="Khusanov-to-start.html"> Khusanov to start on Manchester Derby on Sunday</a>
