--- a/Gachagua-accuses-president-rutto.html
+++ b/Gachagua-accuses-president-rutto.html
@@ -8,9 +8,9 @@
         <script async src="https://fundingchoicesmessages.google.com/i/pub-2859965243036959?ers=1"></script><script>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
        <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
         <meta charset="utf-8">
-        <title>Khusanov to start against Manchester United on Sunday</title></title>
+        <title>Rigathi Gachagua says President Ruto is the head of Sudan rebels</title></title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Latest Football News" name="keywords">
+        <meta content="Popular News" name="keywords">
         <meta content="" name="description">
 
         <!-- Favicon -->
@@ -113,7 +113,7 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/khusanov.jpg" />
+                            <img src="img/gachagua.jpg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>05-Apr-2025</a>
                             <h1>Khusanov To Start | 4-2-3-1 Manchester City Predicted Lineup Vs Manchester United</h1>
