--- a/Gachagua-accuses-president-rutto.html
+++ b/Gachagua-accuses-president-rutto.html
@@ -115,9 +115,8 @@
                         <div class="tn-img">
                             <img src="img/gachagua.jpg" />
                             
-                                    <a class="tn-date" href=""><i class="far fa-clock"></i>05-Apr-2025</a>
-                            <h1>Khusanov To Start | 4-2-3-1 Manchester City Predicted Lineup Vs Manchester United</h1>
-<p>Manchester City will face off against Manchester United at Old Trafford this Sunday evening as they look to secure a positive result in the Manchester derby. The Mancunian club managed to earn a solid 2-0 win over Leicester City recently which should keep them in good spirits ahead of this game.</p>
+                                    <a class="tn-date" href=""><i class="far fa-clock"></i>08-Apr-2025</a>
+                            <h1>Gachagua accuses President Ruto saying he is the head of Sudan Rebels </h1>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -129,45 +128,76 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-                            <p>Pep Guardiola will set his men up in a 4-2-3-1 formation and is expected to name a strong first XI for this game. Abdukodir Khusanov could get a chance to impress from the start of this derby.</p>
-<h3>4-2-3-1 Manchester City Predicted Lineup To Face Manchester United</h3>
-<h4>Defence</h4>
-<p>Ederson will play in goal for the Mancunian giants after he kept a clean sheet versus the Foxes in his last league outing. Ruben Dias will resume his defensive partnership with Abdukodir Khusanov at the heart of Guardiola’s backline as they look to keep the Man United attackers quiet this Sunday.</p>
-<p>Matheus Nunes will feature as the right-back while Josko Gvardiol looks to impress on the other side as the left-back. Both of them will be eager to get forward and express themselves in the opposition half.</p>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-8r+ez-1j-39+br"
-     data-ad-client="ca-pub-2859965243036959"
-     data-ad-slot="9681146952"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-                            <p>Rico Lewis will offer cover for the defensive positions on the bench.</p>
-<h4>Midfield</h4>
-<p>Ilkay Gundogan and Nico Gonzalez will operate as the holding midfielders as they look to dictate the tempo of the game at the centre of the park.</p>
-<p>The talented trio of Jeremy Doku, Jack Grealish and Savio will function just ahead of them as part of Guardiola’s attack. All three of them need to combine well if they want to cause some headaches for the Man United centre-backs this weekend.</p>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-8r+ez-1j-39+br"
-     data-ad-client="ca-pub-2859965243036959"
-     data-ad-slot="9681146952"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-                            <p>Kevin de Bruyne and Bernardo Silva will be named on the bench as they await their chance to make an impact in the second 45 minutes if needed.</p>
-<h4Attack</h4>
-<img src="img/grealish.jpg" />
-    <p>Omar Marmoush will lead the line for the Mancunian outfit on the offensive end of the field. He managed to score against Leicester which should give him a ton of confidence ahead of this Manchester derby.</p>
-<p>Phil Foden will be available for selection on the bench and might come on to influence the game in the latter stages of the contest if Man City are in need of a goal by then.</p>
+                          <p>  Former Deputy President Rigathi Gachagua has branded President William Ruto “the real commander” of Sudan's Rapid Support Forces (RSF) over alleged shady business deals with the paramilitary group’s leader, Mohamed Hamdan Dagalo, alias Hemedti.</p>
 
-    
+<p>Amid RSF’s ongoing war with Sudan’s army for the past two years, Gachagua claims Ruto has been conducting gold trade with Hemedti so that the RSF leader can acquire money to buy firearms for the paramilitary force.</p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<p>“The real commander of RSF is not Hemedti, it is William Ruto. The money from gold is being cleaned through Kenya to buy firearms,” Gachagua told KTN in a Monday night interview.</p>
 
+<p>The former DP, who has been critical of Ruto's administration since his October impeachment, claims the purported dealings go back to 2023 when Ruto allegedly coerced him into inviting Hemedti on an official visit to Kenya.</p>
+
+<p>Ruto called me to his office and said, diplomatically, a president can only invite another president for a visit. But he had a vice president he wanted to invite to Kenya, so he wanted me to do it on his behalf,” Gachagua told the broadcaster.</p>
+<p>“He had a letter, which I signed and after Hemeti came, we discussed about the Kenya and Sudan, then I took him to the President… Later on, I realised they are doing business.”</p>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<p>Gachagua alleges Ruto later directed him to invite Hemedti again, which he purportedly refused on grounds of the numerous sanctions against the RSF leader by other countries over the war, which to date has killed 150,000 people and forced more than 11 million others from their homes.</p>
+
+<p>“I told him that as a father and a Christian, I cannot be a part of it and cannot invite him,” said Gachagua.</p>
+
+<p>“He told me I must invite him and asked me, Do you know how much I will lose by you not inviting him here?”</p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<p>The former DP claims he refused to yield to his then-boss’s demands, after which his forged signature was purportedly used to invite Hemedti.</p>
+
+<p>The visit was eventually withdrawn after Gachagua confronted Ruto about it and threatened not to host the RSF leader, claims Gachagua.</p>
+
+<p>“He told me, You will see me!” he said, claiming Ruto accused him of blackmail.</p>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<p>“I am available to give evidence. I ask the international community to sanction William Ruto, and the Sudan crisis will be solved. Sanctioning Hemedti is pointless,” the former DP added.</p>
+
+<p>The damning allegations come just over a month after Kenya hosted RSF and allied groups in Nairobi to sign a transitional constitution, taking them closer to forming a parallel government.</p>
+
+<p>It led to Sudan indefinitely suspending all imports from Kenya to “protect its national interests and security concerns”, which Kenya downplayed as a “gross overreaction</p>
+ <p>  Source: Citizen digital </p>
                                 </div>
                             </div>
                         </div>
