--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
                                     </div>
                         <div class="col-md-6">
                                 <div class="tn-img">
+                                    <img src="img/gachagua.jpg" />
+                                    
+                                            <a class="tn-date" href="Gachagua-accuses-president-ruto.html"><i class="far fa-clock"></i>08-Apr-2025</a>
+                                    <a class="cn-title" href="Gachagua-accuses-president-ruto.html "> Khusanov to start on Manchester Derby on Sunday</a>
+                                        </div>      
+                        </div>
+                        <div class="col-md-6">
+                                <div class="tn-img">
                                     <img src="img/khusanov.jpg" />
                                     
                                             <a class="tn-date" href="Khusanov-to-start.html"><i class="far fa-clock"></i>05-Apr-2025</a>
