--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                     <img src="img/gachagua.jpg" />
                                     
                                             <a class="tn-date" href="Gachagua-accuses-president-ruto.html"><i class="far fa-clock"></i>08-Apr-2025</a>
-                                    <a class="cn-title" href="Gachagua-accuses-president-ruto.html "> Khusanov to start on Manchester Derby on Sunday</a>
+                                    <a class="cn-title" href="Gachagua-accuses-president-ruto.html "> Gachagua accuses president Ruto for being head of Sudan Rebels</a>
                                         </div>      
                         </div>
                         <div class="col-md-6">
