--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
                                     </div>
                         <div class="col-md-6">
                                 <div class="tn-img">
+                                    <img src="img/kalazar.jpg" />
+                                    
+                                            <a class="tn-date" href="wajir-kala-azar-outbreak.html"><i class="far fa-clock"></i>08-Apr-2025</a>
+                                    <a class="cn-title" href=" wajir-kala-azar-outbreak.html "> Shortage of medicine, testing kits, as Wajir battles Kala-azar disease </a>
+                                </div>
+                        <div class="col-md-6">
+                                <div class="tn-img">
                                     <img src="img/gachagua.jpg" />
                                     
                                             <a class="tn-date" href="Gachagua-accuses-president-ruto.html"><i class="far fa-clock"></i>08-Apr-2025</a>
