--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
                                     </div>
                         <div class="col-md-6">
                                 <div class="tn-img">
+                                    <img src="img/duale.jpg" />
+                                    
+                                            <a class="tn-date" href="cholera-outbreak.html"><i class="far fa-clock"></i>08-Apr-2025</a>
+                                    <a class="cn-title" href="cholera-outbreak.html ">Ministry of Health confirms Cholera outbreak after 97 cases, 6 deaths reported </a>
+                                </div>
+                        <div class="col-md-6">
+                                <div class="tn-img">
                                     <img src="img/lost.jpg" />
                                     
                                             <a class="tn-date" href="missing-family-in-tsavo-found-safe.html"><i class="far fa-clock"></i>08-Apr-2025</a>
