--- a/cholera-outbreak.html
+++ b/cholera-outbreak.html
@@ -146,7 +146,17 @@
 <p>Migori leads the pack with 53 cases and 1 death reported, with the affected sub-counties being; Suna East, Suna West, Kuria East and Kuria West.</p>
 
 <p>In Kisumu County, 32 cases and 4 deaths were reported in Nyando and Muhoroni, while an additional 12 cases and 1 death were recorded in the Kasarani, Embakasi East, Embakasi Central, Roysambu, Kibra and Dagoretti South areas of Nairobi County.</p>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <p>Cholera is a highly infectious waterborne disease caused by a bacteria known as Vibrio cholera. The disease is contracted through consuming food or water contaminated with the bacteria.</p>
 
 <p>Symptoms include sudden onset of severe watery diarrhea, vomiting, muscle cramps, and severe dehydration, often appearing within 2 hours to 5 days after infection.</p>
@@ -164,7 +174,17 @@
 <p>CS Duale noted that a raft of emergency measures is underway, including the provision of oral rehydration salts, setting up isolation units, and ramping up community awareness.</p>
 
 <p>He also appealed to the public to observe strict hygiene practices: wash hands with soap, treat drinking water, avoid raw or undercooked food, and seek immediate medical attention if symptoms like watery diarrhea or vomiting appear.</p>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <p>“The Ministry of Health reassures the public that the country is adequately prepared to manage and contain this outbreak,” stated the CS.</p>                
  <p>  Source: Citizen digital </p>
                                 </div>
