--- a/kenya-digital-innovations.html
+++ b/kenya-digital-innovations.html
@@ -8,7 +8,7 @@
         <script async src="https://fundingchoicesmessages.google.com/i/pub-2859965243036959?ers=1"></script><script>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
        <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
         <meta charset="utf-8">
-        <title>Rigathi Gachagua says President Ruto is the head of Sudan rebels</title></title>
+        <title> Dutch Minister hails success of digital healthcare innovations during Kenya visit</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Popular News" name="keywords">
         <meta content="" name="description">
@@ -113,10 +113,10 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/gachagua.jpg" />
+                            <img src="img/mtiba.jpg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>08-Apr-2025</a>
-                            <h1>Gachagua accuses President Ruto saying he is the head of Sudan Rebels </h1>
+                            <h1>Dutch Minister hails success of digital healthcare innovations during Kenya visit </h1>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -128,9 +128,9 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-                          <p>  Former Deputy President Rigathi Gachagua has branded President William Ruto “the real commander” of Sudan's Rapid Support Forces (RSF) over alleged shady business deals with the paramilitary group’s leader, Mohamed Hamdan Dagalo, alias Hemedti.</p>
 
-<p>Amid RSF’s ongoing war with Sudan’s army for the past two years, Gachagua claims Ruto has been conducting gold trade with Hemedti so that the RSF leader can acquire money to buy firearms for the paramilitary force.</p>
+<p>A top Dutch government official was impressed by Kenya's major milestones in the digital healthcare field when she toured a facility in Nairobi and learned how it utilizes technology to impact lives.</p>
+<p>During a recent trip to Kenya, Reinette Klever, the Dutch Minister for Trade and Development, toured the Nairobi offices of CarePay, a health tech company born from a 2016 Dutch-Kenyan partnership involving PharmAccess, the Investment Fund for Health in Africa (IFHA), and Safaricom.</p>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -142,13 +142,13 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<p>“The real commander of RSF is not Hemedti, it is William Ruto. The money from gold is being cleaned through Kenya to buy firearms,” Gachagua told KTN in a Monday night interview.</p>
+<p>Her visit was part of a wider Dutch economic mission coinciding with the State Visit of King Willem-Alexander and Queen Máxima.</p>
 
-<p>The former DP, who has been critical of Ruto's administration since his October impeachment, claims the purported dealings go back to 2023 when Ruto allegedly coerced him into inviting Hemedti on an official visit to Kenya.</p>
+<p>CarePay developed the popular health insurance technology platform M-TIBA, which allows users to manage health insurance, facilitates real-time claim payments between patients, providers, and insurers, and grants patients control over their health data.</p>
 
-<p>Ruto called me to his office and said, diplomatically, a president can only invite another president for a visit. But he had a vice president he wanted to invite to Kenya, so he wanted me to do it on his behalf,” Gachagua told the broadcaster.</p>
-<p>“He had a letter, which I signed and after Hemeti came, we discussed about the Kenya and Sudan, then I took him to the President… Later on, I realised they are doing business.”</p>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+<p>The M-TIBA platform has enrolled 4.7 million Kenyans and connects over 5,100 healthcare providers.</p>
+
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
      style="display:block"
@@ -158,12 +158,27 @@
      data-ad-slot="9681146952"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<p>Gachagua alleges Ruto later directed him to invite Hemedti again, which he purportedly refused on grounds of the numerous sanctions against the RSF leader by other countries over the war, which to date has killed 150,000 people and forced more than 11 million others from their homes.</p>
+</script>                       
+<p>Klever witnessed a live demonstration of how M-TIBA works and was given a deep dive into how another tech platform, the Medical Credit Fund (MCF) digital lending program, works.</p>
 
-<p>“I told him that as a father and a Christian, I cannot be a part of it and cannot invite him,” said Gachagua.</p>
+<p>MCF, another initiative supported by Dutch funding, provides collateral-free mobile loans to healthcare SMEs, enabling them to expand services and purchase equipment.</p>
 
-<p>“He told me I must invite him and asked me, Do you know how much I will lose by you not inviting him here?”</p>
+<p>The digital lending program, Klever learnt, has already disbursed about Ksh.25 billion ($195 million) to over 2,300 healthcare businesses across Africa, boasting a 96% repayment rate and empowering numerous entrepreneurs, particularly women.</p>
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>                    
+<p>The minister later visited an AAR Healthcare clinic at Sarit Center, Westlands, which utilizes M-TIBA.</p>
+
+<p>They demonstrated how the platform has dramatically reduced insurance claim processing times from an average of 77 days down to just three days, significantly improving cash flow and the patient experience.</p>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -175,29 +190,10 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<p>The former DP claims he refused to yield to his then-boss’s demands, after which his forged signature was purportedly used to invite Hemedti.</p>
+<p>Officials noted that 17% of patients at the busy Sarit Center clinic access services via M-TIBA.</p>
 
-<p>The visit was eventually withdrawn after Gachagua confronted Ruto about it and threatened not to host the RSF leader, claims Gachagua.</p>
-
-<p>“He told me, You will see me!” he said, claiming Ruto accused him of blackmail.</p>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-8r+ez-1j-39+br"
-     data-ad-client="ca-pub-2859965243036959"
-     data-ad-slot="9681146952"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<p>“I am available to give evidence. I ask the international community to sanction William Ruto, and the Sudan crisis will be solved. Sanctioning Hemedti is pointless,” the former DP added.</p>
-
-<p>The damning allegations come just over a month after Kenya hosted RSF and allied groups in Nairobi to sign a transitional constitution, taking them closer to forming a parallel government.</p>
-
-<p>It led to Sudan indefinitely suspending all imports from Kenya to “protect its national interests and security concerns”, which Kenya downplayed as a “gross overreaction</p>
- <p>  Source: Citizen digital </p>
+<p>"The success of these Kenyan initiatives, particularly CarePay's technology, is gaining international attention, with the model being explored for application in the UAE and potentially even to address healthcare fragmentation in the Netherlands," read a statement.</p>
+                            <p>Source: Citizen digital </p>
                                 </div>
                             </div>
                         </div>
