--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                                 <div class="tn-img">
                                     <img src="img/mtiba.jpg" />
                                     
-                                            <a class="tn-date" href="digital-innovation.html"><i class="far fa-clock"></i>08-Apr-2025</a>
-                                    <a class="cn-title" href="digital-innovation.html ">Ministry of Health confirms Cholera outbreak after 97 cases, 6 deaths reported </a>
+                                            <a class="tn-date" href="kenya-digital-innovations.html"><i class="far fa-clock"></i>08-Apr-2025</a>
+                                    <a class="cn-title" href="kenya-digital-innovations.html ">Ministry of Health confirms Cholera outbreak after 97 cases, 6 deaths reported </a>
                                 </div>
                         <div class="col-md-6">
                                 <div class="tn-img">
