--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
                                     <img src="img/mtiba.jpg" />
                                     
                                             <a class="tn-date" href="kenya-digital-innovations.html"><i class="far fa-clock"></i>08-Apr-2025</a>
-                                    <a class="cn-title" href="kenya-digital-innovations.html ">Ministry of Health confirms Cholera outbreak after 97 cases, 6 deaths reported </a>
+                                    <a class="cn-title" href="kenya-digital-innovations.html ">Dutch Minister hails success of digital healthcare innovations during Kenya visit </a>
                                 </div>
                         <div class="col-md-6">
                                 <div class="tn-img">
                                     <img src="img/duale.jpg" />
                                     
                                             <a class="tn-date" href="cholera-outbreak.html"><i class="far fa-clock"></i>08-Apr-2025</a>
-                                    <a class="cn-title" href="cholera-outbreak.html "> Dutch Minister hails success of digital healthcare innovations during Kenya visit</a>
+                                    <a class="cn-title" href="cholera-outbreak.html "> Ministry of Health confirms Cholera outbreak after 97 cases, 6 deaths reported</a>
                                 </div>
                         <div class="col-md-6">
                                 <div class="tn-img">
