--- a/echoes-of-war.html
+++ b/echoes-of-war.html
@@ -189,7 +189,7 @@ It centers on a nation recovering from a civil war, with young citizens at the f
 <p>The elderly, once revered for their wisdom and experience, feel increasingly sidelined by a rising generation that champions innovation and rejects rigid traditions.
 
 <p>The play uses this fictional backdrop to reflect real-world tensions between conservative values and progressive ideals.</p>
-<h5>Characters
+<h5>Characters</h5>
 <p>At the heart of the narrative is Sultan, a powerful ruler caught between upholding ancient customs and embracing a future he barely understands.</p>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
