--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
                                         </div>
                                     </div>
                         <div class="tn-img">
+                                    <img src="img/uhuru.jpg" />
+                                    
+                                            <a class="tn-date" href="Narok-leaders-oppose-airport.html"><i class="far fa-clock"></i>12-Apr-2025</a>
+                                    <a class="cn-title" href="Narok-leaders-oppose-airport.html "> Narok leaders oppose airport project linked to Uhuru Kenyatta</a>
+                        </div>
+                        <div class="tn-img">
                                     <img src="img/echoes.jpg" />
                                     
                                             <a class="tn-date" href="echoes-of-war.html"><i class="far fa-clock"></i>10-Apr-2025</a>
