--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
                                         </div>
                                     </div>
                         <div class="tn-img">
+                                    <img src="img/sifuna.jpg" />
+                                    
+                                            <a class="tn-date" href="president-ruto-to-sifuna.html"><i class="far fa-clock"></i>12-Apr-2025</a>
+                                    <a class="cn-title" href="president-ruto-to-sifuna.html "> Kuja polepole ama tutakudiscipline!’ President Ruto warns ODM SG Edwin Sifuna</a>
+                        </div>
+                        <div class="tn-img">
                                     <img src="img/uhuru.jpg" />
                                     
                                             <a class="tn-date" href="Narok-leaders-oppose-airport.html"><i class="far fa-clock"></i>12-Apr-2025</a>
